--- a/azure.yaml
+++ b/azure.yaml
@@ -22,6 +22,17 @@ hooks:
       run: ./infra/hooks/preprovision.sh
       interactive: true
       continueOnError: false
+  postdeploy:
+    windows:
+      shell: pwsh
+      run: .\infra\hooks\postdeploy.ps1
+      interactive: true
+      continueOnError: false
+    posix:
+      shell: sh
+      run: ./infra/hooks/postdeploy.sh
+      interactive: true
+      continueOnError: false
   postprovision:
     windows:
       shell: pwsh
