Simple chainlit UI to interact with created agents

--- a/src/frontend/agents/02-moneta-banking.yaml
+++ b/src/frontend/agents/02-moneta-banking.yaml
@@ -1,4 +1,4 @@
-name: Moneta
-description: Moneta agent
+name: Moneta_Banking
+description: Moneta Banking Agent
 instructions: |
   You are a helpful agent that helps the user manage their finances.
