--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -9,4 +9,7 @@ dependencies = [
     "semantic-kernel>=1.32.2",
     "rich>=14.0.0",
     "chainlit>=2.5.5",
+    "azure-monitor-opentelemetry-exporter>=1.0.0b38",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.31.1",
+    "opentelemetry-instrumentation>=0.52b1",
 ]
