--- a/src/frontend/.chainlit/config.toml
+++ b/src/frontend/.chainlit/config.toml
@@ -1,7 +1,7 @@
 [project]
 # Whether to enable telemetry (default: true). No personal data is collected.
-enable_telemetry = true
-
+# IMPORTANT: keep this at false as it would interfere with Azure OpenTelemetry!
+enable_telemetry = false
 
 # List of environment variables to be provided by each user to use the app.
 user_env = []
