--- a/src/frontend/pyproject.toml
+++ b/src/frontend/pyproject.toml
@@ -12,4 +12,9 @@ dependencies = [
     "azure-monitor-opentelemetry-exporter>=1.0.0b38",
     "opentelemetry-exporter-otlp-proto-grpc>=1.31.1",
     "opentelemetry-instrumentation>=0.52b1",
+    "azure-monitor-opentelemetry>=1.6.10",
+    "opentelemetry-sdk>=1.31.1",
+    "azure-ai-projects>=1.0.0b11",
+    "opentelemetry-instrumentation-openai-v2>=2.1b0",
+    "azure-core-tracing-opentelemetry>=1.0.0b12",
 ]
