FIX telemetry in Azure by adding chainlit config file to docker image

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -32,6 +32,7 @@ RUN uv sync \
 
 COPY app.py /app/
 COPY utils.py /app/
+COPY .chainlit/config.toml /app/.chainlit/
 
 ###############
 # Final image #
